--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<html>
+  <title> First try at coding </title>
+  <body>
+    <h1> this is my first page </h1>
+  </body>
+  
+  <style>
+    body {
+      color:#660066;
+      text-align:center;
+    }
+  </style>
+</html>
