--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-  <title> First try at coding </title>
+  <title> Zoe Doucette </title>
   <body>
-    <h1> this is my first page </h1>
+    <h1> Under Construction </h1>
   </body>
   
   <style>
