--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
   <title> First try at coding </title>
   <body>
-    <h1> Under Construction. </h1>
+    <h1> <b> This site is under construction.</b> </h1>
+    <p> I'm learning how to code, you will have to come back some other time. In the meantime go check out my 
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+      <span style="font-weight: 400;">one survery</span> == $0
+    </a>
+    </p>
   </body>
   
   <style>
