--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   <title> First try at coding </title>
   <body>
     <h1> <b> This site is under construction.</b> </h1>
-    <p> I'm learning how to code, you will have to come back some other time. In the meantime go check out my 
+    <p> I'm learning how to code, you will have to come back some other time. In the meantime go check out my projects on this other
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-      <span style="font-weight: 400;">one survery</span> == $0
+      <span style="font-weight: 400;">site.</span> 
     </a>
     </p>
   </body>
