--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <div class ="main-container">
       <div id="page" class-"single">
         <article class ="article">
-          d>iv id="content_box">
+          <div id="content_box">
           <p class="nocomments"></p>
           
           
