--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
                                
 
         
-   <img src="images/resume.jpg" width="65%" height="65%" align="middle"/>
+   <img src="images/resume.jpg" width="65%" height="65%" />
 
     <!-- Footer Elements -->
 
